# simbsig

./: .gitignore  .readthedocs.yaml  README.md  __init__.py  pyproject.toml  setup.py
benchmarking/: create_figures.py  dataset_generator.py  queryset_generator.py  runtime_benchmark.py  runtime_benchmark_cuml.py
docs/: KNeighborsClassifier.rst  MiniBatchKMeans.rst  Quickstart.rst  conf.py  index.rst  requirements.txt
docs/_build/doctrees/: Advanced.doctree  KNeighborsClassifier.doctree  KNeighborsRegressor.doctree  MiniBatchKMeans.doctree  NearestNeighbors.doctree  PCA.doctree  Quickstart.doctree  RadiusNeighborsClassifier.doctree  RadiusNeighborsRegressor.doctree  environment.pickle  (+1 more)
simbsig/base/: __init__.py  _base.py
simbsig/cluster/: MiniBatchKMeans.py  __init__.py
simbsig/decomposition/: PCA.py  __init__.py
simbsig/neighbors/: KNeighborsClassifier.py  KNeighborsRegressor.py  NearestNeighbors.py  RadiusNeighborsClassifier.py  RadiusNeighborsRegressor.py  __init__.py
simbsig/utils/: datasets.py  metrics.py  utils.py
testing/: Callable_metric_tests.py  KNeighborsClassifier_tests.py  KNeighborsRegressor_tests.py  MiniBatchKMeans_tests.py  NearestNeighbors_tests.py  PCA_tests.py  Precomputed_tests.py  RadiusNeighborsClassifier_tests.py  RadiusNeighborsRegressor_tests.py  Simbsig_Tests.py  query.hdf5  quick_test.py  train.hdf5
tutorials/: KNeighborsClassifier_Demo.ipynb  KNeighborsRegressor_Demo.ipynb  MiniBatchKMeans_Demo.ipynb  NearestNeighbors_Demo.ipynb  PCA_Demo.ipynb  RadiusNeighborsClassifier_Demo.ipynb  RadiusNeighborsRegressor_Demo.ipynb
(+22 files in other folders)
