[tool.poetry]
name = "simbsig"
version = "0.1.0"
description = "A python package for out-of-core similarity search and dimensionality reduction"
authors = ["Eljas Roellin <roelline@student.ethz.ch>",
           "Michael F. Adamer <michael.adamer@bsse.ethz.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
h5py = "^3.7.0"
torch = "^1.12.0"
numpy = "^1.23.0"
tqdm = "^4.64.0"
scikit-learn = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
